prusti-tests/tests/verify/ui/counterexamples/int.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/int.rs:5:11
   |
5  | #[ensures(result != 86)]
   |           ^^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/int.rs:6:1
   |
6  | / fn test1(x: i32) -> i32 {
7  | |     let y = x + 1;
8  | |     // TODO: if this assertion is enabled, a counterexample for "result" is
9  | |     // displayed with the confusing value 43. At this point, the result CE
...  |
12 | |     y * 2
13 | | }
   | |_^
note: counterexample for "x"
        initial value: 42
        final value:   42
  --> $DIR/int.rs:6:10
   |
6  | fn test1(x: i32) -> i32 {
   |          ^
note: counterexample for "y"
        final value:   43
  --> $DIR/int.rs:7:9
   |
7  |     let y = x + 1;
   |         ^
note: counterexample for result
        final value:   86
  --> $DIR/int.rs:6:21
   |
6  | fn test1(x: i32) -> i32 {
   |                     ^^^

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/int.rs:16:11
   |
16 | #[ensures(result != 42)]
   |           ^^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/int.rs:17:1
   |
17 | / fn test2(x: i32) -> i32 {
18 | |     x + 21
19 | | }
   | |_^
note: counterexample for "x"
        initial value: 21
        final value:   21
  --> $DIR/int.rs:17:10
   |
17 | fn test2(x: i32) -> i32 {
   |          ^
note: counterexample for result
        final value:   42
  --> $DIR/int.rs:17:21
   |
17 | fn test2(x: i32) -> i32 {
   |                     ^^^

error: aborting due to 2 previous errors

